# ai-portfolio

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agentic/: Makefile  README.md  main.py
agentic/configs/: logging.yaml  logging_utils.py
agentic/examples/: content_analysis_crew.py  creative_writing_crew.py  simple_research_crew.py
agentic/src/agents/: __init__.py
agentic/src/config/: __init__.py  environments.py
agentic/src/utils/: logging_utils.py
prompts/: AngusHumanWritingStylePrompt.md  avocado-oil-research-prompt.md  ca_shower_photo_inspection_prompt_template_packaged.md  crewai_repo_prompt.md  davids_wrting_style.md  food-product-volume-research-prompt.md  shower_inspection_prompt.md
src/: __init__.py
src/agents/: base_agent.py
src/config/: settings.py
src/utils/: __init__.py  crew_factory.py  file_utils.py  performance_monitor.py  validation_utils.py
tests/: conftest.py
